# kate-ollama

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  metadata.json  ollama_plugin.cpp  ollama_plugin.h
src/: CMakeLists.txt  Messages.sh  kateollama.json  kateollamaplugin.cpp  kateollamaplugin.h  kateollamaview.cpp  kateollamaview.h  maintab.cpp  maintab.h  messages.cpp  messages.h  ollamadata.cpp  ollamadata.h  ollamaglobals.cpp  ollamaglobals.h  ollamasystem.cpp  ollamasystem.h  ollamaview.cpp  ollamaview.h  plugin.cpp  plugin.h  settings.cpp  settings.h  toolwidget.cpp  toolwidget.h  toolwindow.cpp  toolwindow.h
src/ollama/: ollamadata.cpp  ollamadata.h  ollamaglobals.cpp  ollamaglobals.h  ollamaresponse.cpp  ollamaresponse.h  ollamasystem.cpp  ollamasystem.h
src/ui/: qollamaplaintextedit.cpp
src/ui/controls/: qollamaplaintextedit.cpp  qollamaplaintextedit.h  qsessionbutton.cpp  qsessionbutton.h
src/ui/tabs/: maintab.cpp  maintab.h
src/ui/utilities/: messages.cpp  messages.h
src/ui/views/: ollamaview.cpp  ollamaview.h
src/ui/widgets/: toolwidget.cpp  toolwidget.h
